--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>GitTrends</title>
-    <script
-      src="https://kit.fontawesome.com/63f25d52da.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="/css/fas.min.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
