enable gzip compression

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>GitTrends</title>
     <link href="/css/fas.min.css" rel="stylesheet" />
+    <!-- twitter metadata -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@hsborges" />
+    <meta name="twitter:title" content="GitTrends.app" />
+    <meta
+      name="twitter:description"
+      content="Monitoring popular GitHub projects to provide useful insights for developers, project owners, and software engineering researchers."
+    />
+    <meta
+      name="twitter:image"
+      content="http://gittrends.app/images/twitter_card2.png"
+    />
+    <meta name="twitter:domain" content="https://gittrends.app" />
   </head>
   <body>
     <noscript>
